Created image scraper for website.

--- a/anime-site/Views/UserAccount/Register.cshtml
+++ b/anime-site/Views/UserAccount/Register.cshtml
@@ -21,7 +21,7 @@
      
 
                 <label for="confirm-password">Confirm Password</label><br />
-                <input type="password" id="confirm-password" name="ConfirmPassword" /><br />
+                <input type="password" id="confirm-password" name="ConfirmPassword" /><br /><br />
                 <div class="warning-text">@ViewBag.Warning</div>
             </div>
             <center><input type="submit" value="Submit" /></center>
