--- a/anime-site/Views/UserAccount/Login.cshtml
+++ b/anime-site/Views/UserAccount/Login.cshtml
@@ -5,26 +5,31 @@
 
 
 <main aria-labelledby="title">
+    <div class="form-position">
 
 
-    <h1 class="my-titles">@ViewBag.Title</h1>
-    @using (Html.BeginForm("Login", "UserAccount", FormMethod.Post))
-    {
-        <div class="left-forms">
 
-            <label for="username"> Username</label><br />
-            <input type="text" id="username" name="username" /><br />
-            @Html.ValidationMessageFor(u => u.username, "", new { @class = "warning-text" })<br />
+        @using (Html.BeginForm("Login", "UserAccount", FormMethod.Post))
+        {
+            <h1 class="form-titles">@ViewBag.Title</h1>
+            <div class="form-container left-forms">
 
-            <label for="password"> Password</label><br />
-            <input type="password" id="password" name="password" /><br />
-            @Html.ValidationMessageFor(p => p.password, "", new { @class = "warning-text" })<br />
-            <div class="warning-text"> @ViewBag.Warning</div>
-        </div>
-        <center>
-            <input type="submit" value="Submit" />
-            <div class="warning-text"> @ViewBag.Message</div>
-        </center>
-    }
+                <div class="form-group">
+                    <label for="username"> Username</label><br />
+                    <input type="text" id="username" name="username" /><br />
+                    @Html.ValidationMessageFor(u => u.username, "", new { @class = "warning-text" })<br />
+                </div>
+                <div class="form-group">
+                    <label for="password"> Password</label><br />
+                    <input type="password" id="password" name="password" /><br />
+                    @Html.ValidationMessageFor(p => p.password, "", new { @class = "warning-text" })<br />
+                    <div class="warning-text"> @ViewBag.Warning</div><br />
+                </div>
 
+                    <input type="submit" value="Submit" />
+                    <div class="warning-text"> @ViewBag.Message</div>
+            </div>
+
+          }
+    </div>
 </main>
