--- a/anime-site/Content/Site.css
+++ b/anime-site/Content/Site.css
@@ -1,6 +1,9 @@
-﻿/* Set padding to keep content from hitting the edges */
+﻿body {
+    display: flex;
+}
+
+/* Set padding to keep content from hitting the edges */
 .body-content {
-    margin-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -19,26 +22,247 @@ textarea {
     max-width: 280px;
 }
 
-.warning-text{
-    color:red;
-    font-size:14px;
-    text-align:left;
+
+p {
+    font-family: Roboto;
 }
 
-.left-forms{
-    display:inline-block;
-    text-align:left;
+.hometext {
+    width: 50%;
+    padding: 20px;
+    margin: auto;
 }
 
-form{
+.hometesxt p {
+    margin-top: 60px;
+    font-family: Poppins;
+    font-size: 22px;
+}
+
+.hometext {
+    text-align: center;
+}
+
+.homenavbar {
+}
+
+.navbar-inverse {
+    background-color: rgb(3, 36, 86);
+}
+
+
+.navbar-inverse .navbar-nav > li:hover {
+    background-color: #012448;
+    color: white;
+}
+
+.navbar-header .navbar-brand {
+    color: white;
+    font-family: Poppins;
+    font-size: 20px;
+
+}
+
+.navbar-div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    column-gap: 30px;
+    list-style-type: none;
+    position: absolute;
+    background-color: #6fa3d9;
+    width: 100%;
+    height: 60px;
+    padding: 10px;
+}
+
+.navitems {
+    font-family: Poppins;
+    font-size: 20px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    column-gap: 30px;
+    list-style-type: none;
+    margin-left: auto;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
+    text-decoration:none;
+    height:100%;
+}
+
+.navitems a {
+    text-decoration: none;
+    color:white;
+ }
+
+.my-container{
+    position:absolute;
+    height:600px;
+}
+
+.material-icons {
+    padding-left: 10px;
+    transform: translateY(5px);
+    color: white;
+    line-height: 0 !important;
+}
+
+.myfooter{
+    position:absolute;
+    bottom:0;
+    width:100%;
+}
+
+.footer {
+    bottom: 0;
+    height: 80px;
+    background-color: #6fa3d9;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: fixed;
+    width: 100%;
+}
+
+.footer p {
+    color: white;
+    font-family: Poppins;
+    text-align: center;
+    padding-top: 30px;
+    margin: auto;
+}
+
+.coverimg {
+    width: 100%;
+    height: 100%;
+}
+
+.coverbg {
+    height: 50%;
+    width: 40%;
+    background-color: #7495f1;
+    margin: auto;
+    position: absolute;
+    z-index: 10;
+    right: 0;
+    top: 15%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.covertext {
+    margin-top: 40px;
+}
+
+.coverbg > * {
+    text-align: center;
+    color: white;
+}
+
+.coverbg h4 {
+    font-size: 80px;
+    font-family: Lexend;
+}
+
+.coverbg p {
+    font-size: 36px;
+    font-family: Poppins;
+}
+
+.row {
+    height: 600px;
+    position: relative;
+}
+
+
+.infoContainer {
+    /*    background-color: aliceblue;
+*/ height: 600px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    column-gap: 10%;
+    margin-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+@media(max-width: 1000px) {
+    .infoContainer {
+        display: grid;
+        gap: 10%;
+    }
+}
+
+.infotext {
+    display: flex;
+    height: 500px;
+    width: 600px;
+    margin: auto;
+    border: 2px solid;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px rgb(3, 36, 86);
+}
+
+.infotext h2 {
+    margin: auto;
+}
+
+h1{
     text-align:center;
-    padding:30px;
+
 }
 
-.reg-success{
-    color:green;
+.form-titles{
+
 }
 
-.my-titles{
-    text-align:center;
+.largerow {
+    height: 1500px;
+}
+
+.form-container {
+    position: relative;
+    width: 500px;
+    height: 200px;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.form-position {
+    margin: auto;
+    margin-top: -35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.warning-text {
+    color: red;
+    font-size: 14px;
+    text-align: left
+}
+
+.dash {
+    text-align: center;
+    position: relative;
+    width: 500px;
+    height: 100px;
+    margin-top: -45%;
+    font-family: Poppins;
+}
+.dash h3{
+    font-size:50px;
+}
+
+container{
+    width:100%;
 }
