Styled landing page

--- a/anime-site/Content/Site.css
+++ b/anime-site/Content/Site.css
@@ -4,8 +4,7 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+ 
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -70,10 +69,11 @@ p {
     column-gap: 30px;
     list-style-type: none;
     position: absolute;
-    background-color: #6fa3d9;
+    /*background-color: #6fa3d9;*/
     width: 100%;
     height: 60px;
-    padding: 10px;
+    padding: 20px;
+    z-index:3;
 }
 
 .navitems {
@@ -118,11 +118,10 @@ p {
 .footer {
     bottom: 0;
     height: 80px;
-    background-color: #6fa3d9;
-    margin-left: -15px;
-    margin-right: -15px;
+    background: #000000;
     position: fixed;
     width: 100%;
+    opacity: 75%;
 }
 
 .footer p {
@@ -263,6 +262,77 @@ h1{
     font-size:50px;
 }
 
-container{
-    width:100%;
+
+.home-background {
+    position: relative;
+    background: rgb(15 108 247 / 10%);
+    height: 1000px;
+}
+
+.home-background::before {
+    content: "";
+    background-image: url("/Content/Assets/luffy.jpg");
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+
+}
+
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+    height: 600px;
+    width: 500px;
+    margin-right: -60%;
+    width: 700px;
+    opacity:80%;
+}
+
+.home-position {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+.login-pill{
+    height: 70px;
+    background-color: white;
+    width: 500px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    text-decoration: none;
+    font-family:Poppins;
+    font-size:20px;
+    color:black;
+}
+
+.reg-pill {
+    height: 70px;
+    width: 500px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    text-decoration: none;
+    font-family: Poppins;
+    font-size: 20px;
+    background-color: #3a43a9;
+    color: white;
+}
+
+.home-button {
+    background-color: black;
+    border-radius: 50px;
 }
