Started on dashboard and "new questions" functionality

--- a/anime-site/Views/Home/Dashboard.cshtml
+++ b/anime-site/Views/Home/Dashboard.cshtml
@@ -6,10 +6,13 @@
 <body>
     <container>
         <div class="dash">
-            <h2>@ViewBag.Title</h2>
+            @*<h2>@ViewBag.Title</h2>*@
 
             <h3>Welcome, @User.Identity.Name</h3>
-    
+
         </div>
     </container>
+
+    <div class="questions">
+    </div>
 </body>
