--- a/anime-site/Views/Home/Index.cshtml
+++ b/anime-site/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <div class = "home-background">
 
         <main class="home-position">
+            <p class="home-title">Anime Recommendation Center</p>
             <container class="home-container">
                 <div class="home-button">
                     @Html.ActionLink("Login", "Login", "UserAccount", new { area = "" }, new { @class = "login-pill" })
