--- a/anime-site/Content/Site.css
+++ b/anime-site/Content/Site.css
@@ -59,12 +59,14 @@ p {
     color: white;
     font-family: Poppins;
     font-size: 20px;
-
+    display: flex;
+    padding-top: 15px;
+    padding-left: 20px;
 }
 
 .navbar-div {
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: row;
     column-gap: 30px;
     list-style-type: none;
@@ -72,7 +74,7 @@ p {
     /*background-color: #6fa3d9;*/
     width: 100%;
     height: 60px;
-    padding: 20px;
+    /*padding: 20px;*/
     z-index:3;
 }
 
@@ -288,12 +290,12 @@ h1{
     row-gap: 50px;
     align-items: center;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 12%;
     height: 600px;
     width: 500px;
-    margin-right: -60%;
-    width: 700px;
-    opacity:80%;
+    margin-right: -30%;
+    width: 600px;
+    opacity: 80%;
 }
 
 .home-position {
@@ -335,4 +337,25 @@ h1{
 .home-button {
     background-color: black;
     border-radius: 50px;
+}
+
+.home-title {
+    width: 500px;
+    display: flex;
+    font-family: Poppins;
+    font-size: 60px;
+    color: white;
+    position: relative;
+    right: 30%;
+    text-align: center;
+    top: 20%;
+}
+
+
+.questions {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    background-color: rgb(14, 17, 58);
 }
