--- a/anime-site/Views/Shared/_Layout.cshtml
+++ b/anime-site/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <script type="module" src="~/Scripts/navbar.js"></script>
+    <script type="module" src="~/Scripts/movement.js"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
