--- a/anime-site/Views/UserAccount/Register.cshtml
+++ b/anime-site/Views/UserAccount/Register.cshtml
@@ -7,7 +7,7 @@
 <main aria-labelledby="title">
     <div class="form-position">
 
-        @using (Html.BeginForm("Register", "UserAccount", FormMethod.Post))
+        @using (Html.BeginForm("Register", "UserAccount", FormMethod.Post, new { spellcheck = "false"}))
         {
             <div class="form-container">
                 <h2 class="form-titles" id="title">@ViewBag.Title</h2>
