--- a/anime-site/Views/UserAccount/Dashboard.cshtml
+++ b/anime-site/Views/UserAccount/Dashboard.cshtml
@@ -47,6 +47,7 @@
                         <div class="button-container">
                             <button type="button" class="qbuttons" value="Male">Male</button>
                             <button type="button" class="qbuttons" value="Female">Female</button>
+                            <button type="button" class="qbuttons" value="Non-Binary">Non-Binary</button>
                             <input type="hidden" name="v2" id="v2" value="" />
                         </div>
                     </div>
@@ -68,7 +69,7 @@
                             <button type="button" class="qbuttons" value="Action">Action/Adventure</button>
                             <button type="button" class="qbuttons" value="Comedy">Comedy</button>
                             <button type="button" class="qbuttons" value="Romance">Romance</button>
-                            <button type="button" class="qbuttons" value="Newbie">I'm addicted to anime</button>
+                            <button type="button" class="qbuttons" value="Shounen">Shounen</button>
                             <input type="hidden" name="v4" id="v4" value="" />
                         </div>
                     </div>
