Fixed issue: user vectors had wrong number of features. Changed python script to 2 parameters Ready to add anime to site

--- a/anime-site/Views/Home/Dashboard.cshtml
+++ b/anime-site/Views/Home/Dashboard.cshtml
@@ -8,31 +8,6 @@
 
 <div>
     <h4>UserDetails</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.username)
-        </dt>
+    <p>@ViewBag.Recs </p>
 
-        <dd>
-            @Html.DisplayFor(model => model.username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.password)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsNew)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsNew)
-        </dd>
-
-    </dl>
 </div>
