--- a/anime-site/Views/UserAccount/Welcome.cshtml
+++ b/anime-site/Views/UserAccount/Welcome.cshtml
@@ -26,7 +26,7 @@
                     <div class="question-group">
                         <div class="intro-text" id="welcome">
                             @ViewBag.Welcome1<br /><br /><br />
-                            @ViewBag.Welcome2 
+                            @ViewBag.Welcome2
                             <div class="qsubmit  next-button" id="continue">Continue</div>
                         </div>
 
@@ -55,10 +55,10 @@
                     <div class="question-group" id="group3">
                         <h2>Which generation do you belong to?</h2>
                         <div class="button-container">
-                            <button type="button" class="qbuttons" value="Gen Alpha">Gen-Aplha (10 or younger)</button>
-                            <button type="button" class="qbuttons" value="Gen Z">Gen-Z (11-28)</button>
+                            <button type="button" class="qbuttons" value="Gen-Alpha">Gen-Aplha (10 or younger)</button>
+                            <button type="button" class="qbuttons" value="Gen-Z">Gen-Z (11-28)</button>
                             <button type="button" class="qbuttons" value="Millenials">Millenials (29-43)</button>
-                            <button type="button" class="qbuttons" value="Gen X">Gen X (44-58)</button>
+                            <button type="button" class="qbuttons" value="Gen-X">Gen X (44-58)</button>
                             <input type="hidden" name="v3" id="v3" value="" />
                         </div>
                     </div>
